# om-parser-stw-potsdam-v2

./: .coveragerc  .gitignore  .pydocstylerc  .pylintrc  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.circleci/: config.yml
docs/: Makefile  api.rst  conf.py  dev.rst  index.rst
docs/_static/css/: custom.css
om_parser_stw_potsdam_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stw_potsdam/: __main__.py  builder.py  canteen.py  canteen_api.py  canteens.ini  config.py  feed.py  reverse.py  swp_webspeiseplan_api.py  swp_webspeiseplan_parser.py  views.py
stw_potsdam/xml_types/: builder.py  canteen_xml.py  feed_xml.py  meal_xml.py  openmensa_xml.py  times_xml.py
tests/: conftest.py  response_util.py  stub_api.py  test_consistency.py  test_retrieval.py  test_views.py
tests/resources/: input.json  menu_output.xml  meta_output.xml  missing-category-output.xml  missing-category.json  offers-dict-output.xml  offers-dict.json  output.xml  swp_categories.json  swp_location.json  swp_menu.json  swp_outlet.json
tests/resources/integration-test/: index.html  location.json  meal_category.json  menu.json  outlets.json  snippet.js
